# python-project-lvl3

./: .gitignore  Makefile  README.md  log  pyproject.toml
.github/workflows/: my_test.yml
page_loader/: __init__.py  download_imgs_and_get_correct_soup.py  download_resources_and_get_correct_soup.py  exceptions.py  get_name.py  get_name_for_html_file.py  page_loader.py  settings.py
page_loader/scripts/: page_loader.py
tests/: test_changes_in_html.py  test_name_for_html_file.py  test_path_to_html_file.py
tests/fixtures/test_changes_in_html1/: fixture1  fixture2
training/training/: settings.py
