[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander Maksimovich"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
argparse = "^1.4.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pook = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
